# doc-color-decomposer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc  main.cpp
assets/quality/: quality.md
cmake/: CMakeLists.txt  DocColorDecomposerConfig.cmake.in
doc_color_clustering/: CMakeLists.txt
doc_color_clustering/include/doc_color_clustering/: doc_color_clustering.h
doc_color_clustering/src/: doc_color_clustering.cpp
docs/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  main.cpp
include/doc_color_decomposer/: doc_color_decomposer.h
quality/: quality.md
src/: CMakeLists.txt  data.cc  data.h  doc_color_decomposer.cc  doc_color_decomposer.cpp  plot_2d_lab_image.h  utils.cc  utils.cpp  utils.h
